[package]
name = "iced_runtime"
description = "A renderer-agnostic runtime for iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
debug = []
multi-window = []
a11y = ["iced_accessibility", "iced_core/a11y"]
wayland = ["iced_accessibility?/accesskit_unix", "iced_core/wayland", "sctk"]

[dependencies]
iced_core.workspace = true
iced_futures.workspace = true
iced_futures.features = ["thread-pool"]
sctk.workspace = true
sctk.optional = true
thiserror.workspace = true
iced_accessibility.workspace = true
iced_accessibility.optional = true
window_clipboard.workspace = true
dnd.workspace = true
