[package]
name = "iced_sctk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = ["iced_runtime/debug"]
system = ["sysinfo"]
application = []
a11y = ["iced_accessibility", "iced_runtime/a11y"]
clipboard = ["smithay-clipboard"]

[dependencies]
tracing = "0.1"
thiserror = "1.0"
sctk.workspace = true
wayland-protocols.workspace = true
# sctk = { package = "smithay-client-toolkit", path = "../../fork/client-toolkit/" }
raw-window-handle = "0.6"
enum-repr = "0.2"
futures = "0.3"
wayland-backend = {version = "0.3.1", features = ["client_system"]}
float-cmp = "0.9"
smithay-clipboard = { version = "0.7", optional = true }
xkbcommon-dl = "0.4.1"
xkbcommon = { version = "0.7", features = ["wayland"] }
itertools = "0.12"
xkeysym = "0.2.0"
lazy_static = "1.4.0"

[dependencies.iced_runtime]
path = "../runtime"
features = ["wayland", "multi-window"]

[dependencies.iced_style]
path = "../style"

[dependencies.iced_graphics]
path = "../graphics"


[dependencies.iced_futures]
path = "../futures"

[dependencies.sysinfo]
version = "0.28"
optional = true

[dependencies.iced_accessibility]
path = "../accessibility"
optional = true
features = ["accesskit_unix"]
