[package]
name = "iced_wgpu"
description = "A renderer for iced on top of wgpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
geometry = ["iced_graphics/geometry", "lyon"]
image = ["iced_graphics/image"]
svg = ["resvg"]
web-colors = ["iced_graphics/web-colors"]
webgl = ["wgpu/webgl"]

[dependencies]
iced_graphics.workspace = true

bitflags.workspace = true
bytemuck.workspace = true
futures.workspace = true
glam.workspace = true
glyphon.workspace = true
guillotiere.workspace = true
log.workspace = true
once_cell.workspace = true
wgpu.workspace = true

lyon.workspace = true
lyon.optional = true

resvg.workspace = true
resvg.optional = true

tracing.workspace = true
tracing.optional = true

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38" }
raw-window-handle.workspace = true
sctk.workspace = true
wayland-protocols.workspace = true
wayland-backend = { version = "0.3.3", features = ["client_system"] }
wayland-client = { version = "0.31.2" }
wayland-sys = { version = "0.31.1", features = ["dlopen"] }
