[package]
name = "sctk_todos"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
iced = { path = "../..", default-features=false, features = ["async-std", "wayland", "debug", "a11y"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
iced_core.workspace = true
once_cell = "1.15"
iced_style = { path = "../../style" }
sctk.workspace = true
log = "0.4.17"
env_logger = "0.10.0"
async-std = "1.0"
directories-next = "2.0.0"

[profile.release-opt]
debug = true
